feat: create api for department
