# internal/http/handler/dependencies.go
@@ -1,5 +1,6 @@
 package handler
 
 type Dependencies struct {
-	Factory *FactoryHandler
+	Factory    *FactoryHandler
+	Department *DepartmentHandler
 }
